--- a/Report.ipynb
+++ b/Report.ipynb
@@ -97,7 +97,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It is desired to modify the host cell to adapt it for production of new materials. A model for Corynebacterium glutamicum is modified to allow the production of psilocybin, a hallucinogenic compound, which is currently seen as promising future medicine in order to treat depressions and other mental afflictions. \n",
+    "For implementation of the syntethic pathway we are introducing a series of enzymatic reactions, which were already reported and succesfully implemented to S. cerevisiae. The syntethic pathways starts from the amino-acid L-tryptophan, which is naturally present in C. glutamicum. Priviously, C. glutamicum was successfully used for the production of L-tryptophan derived products. And thus was selected for this project.\n",
+    "\n",
+    "It is desired to maximize the production of psylocibin while maintaining an acceptable growth rate. For this, it is desired that the production rate and yield of psylocibin in the engineered Corynebacterium should be similar to yields reported previously using S. cerevisiae or E.coli as cell-factory. \n",
+    "Gene optimization methods will be applied to the cell model (iCW773) to improve the theoretical yield of the product. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +116,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Organism/Strain | Year published |\n",
-    "| :- |  :-: |\n",
-    "| *A.niger*/ATCC1015 | 2018 |\n",
-    "| *A.niger*/CBS 513.5 | 2018 |"
+    "As stated before, C. glutamicum is a common industrial workhorse used for a wide range of applications. Therefore, some efforts have been made to simulate this organism in silico for valuable compounds’ yield prediction. The first genome-scale model of C. glutamicum was published by Kjeldsen and Nielsen in 2009 for the strain ATCC 13032. This model comprised 446 reactions and 411 metabolites. Although comparable flux values between in silico and experimental values were seen, some differences in the phenotypic behavior were observed [X]. Yohei and collaborators made a new GSM for the same strain. Their metabolic network included 277 genes, 502 metabolic reactions, and 423 metabolites. This model was curated thoroughly, i.e., it was not just a collection of all publicly available data. Furthermore, the researchers stated that their model simulated different oxygen uptake rates better than the previous GSM published [Y]. \n",
+    "\n",
+    "In the other hand, there is another strain of C. glutamicum that has been used as a workhorse, namely, S9114. This strain is used for glutamate production due to its particularly high resistance to sugars and glutamate. Mei et al., made a tailored GSM for this strain due that previous GSMs lacking a complete glutamate metabolic pathway. Therefore, none of the two models could be used to study glutamate metabolism. The model, named iJM658, comprised 658 genes, 984 metabolites and 1065 reactions [Z]. It was used to predict essential genes, investigate glutamate metabolism, and evaluate the capacity of g-aminobutyrate and l-isoleucine production by S9114. \n",
+    "\n",
+    "The last GSM described for C. glutamicum was published in 2017 by Zhang and collaborators [XX]. They updated the previous model of the C. glutamicum ATCC 13032 metabolic network reconstruction. This new model, named iCW773, consisted of 773 genes, 950 metabolites, and 1207 reactions. It supplemented 496 gene-protein reaction associations, refined five lumped reactions, balanced the mass and charge, and constrained the directionality of reactions. Furthermore, overproduction simulations for L-lysine, 1,2-propanediol, isobutanol, as well as de novo L-proline overproducing strain were highly consistent with experimental data. Moreover, this model has been used lately to simulate production of trans-4-hydroxyproline [YY] and hyaluronic acid [ZZ], and decoupling L-serine catabolism from cell growth [XXX]. \n",
+    "\n",
+    "Despite of the fact that many GSMs are published for C. glutamicum, we could only have access to iCW773 and iJM658. However, only iCW773 was readable by COBRApy package and suitable to perform a MEMOTE analysis. In Table 1 all models are summarized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 1. Corynebacterium glutamicum models available on literature and their specifications.\n",
+    "\n",
+    "| Model | Strain | Genes | Metabolite | Reactions | References | .xml file available |\n",
+    "|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
+    "| ModelCg1 | ATCC 13032 | - | 441 | 446 | X | No |\n",
+    "| ModelCg2 | ATCC 13032 | 277 | 502 | 426 | Y | No |\n",
+    "| iJM658 | S9114 | 658 | 984 | 1065 | Z | Yes |\n",
+    "| iCW773 | ATCC 13032 | 773 | 950 | 1207 | XX | Yes |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regarding MEMOTE analysis, we observed an overall consistency score of 49 %, where stoichiometric consistency, mass balance, charge balance, metabolite connectivity and unbound flux in default medium were 0.0 %, 96.9 %, 100 %, 100 % and 44.4 %, respectively. The most worrisome fact is the stoichiometric consistency, because it means that this model might have at least one reaction with un-conserved metabolites. Nevertheless, the model is good enough to work with it due to it having the highest scores in mass and charge balance, as well as metabolite connectivity. In addition, this model has a metabolic coverage of 1.56, meaning that it has an elevated level of detail. In Table 2 details of MEMOTE analysis for iCW773 are summarized. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 2. MEMOTE analysis of C. glutamicum model iCW773. \n",
+    "\n",
+    "| Model | Total score (%) | Metabolic coverage | Consistency score (%) | Annotation-metabolites score (%) | Annotation-reactions score (%) |\n",
+    "|:-:|:-:|:-:|:-:|:-:|:-:|\n",
+    "| iCW773 | 23 | 1.56 | 49 | 25 | 25 |"
    ]
   },
   {
