figure size changed

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -48,9 +48,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Market of serotonin antidepressant](Pictures/Market_report.png \"Market of serotonin antidepressant\")\n",
+    "![Market of serotonin antidepressant](Pictures/Market_report_small.png \"Market of serotonin antidepressant\")\n",
     "\n",
-    "Figure 2 - The estimated increase in the drug markets of different forms of antidepressants. Market with a red ring are the drugs using a serotonin agonist like Psilocin."
+    "Figure 2 - The estimated increase in the drug markets of different forms of antidepressants. Market with a red ring are the drugs using a serotonin agonist like Psilocin.\n"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
