Referenced for Coryne as cell-factory are added

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -186,6 +186,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. \tWendisch VF. Metabolic engineering advances and prospects for amino acid production. Metab Eng. 2020;58. doi:10.1016/j.ymben.2019.03.008 \n",
+    "\n",
+    "2. \tBrinkrolf K, Schröder J, Pühler A, Tauch A. The transcriptional regulatory repertoire of Corynebacterium glutamicum: Reconstruction of the network controlling pathways involved in lysine and glutamate production. J Biotechnol. 2010;149(3). doi:10.1016/j.jbiotec.2009.12.004 \n",
+    "\n",
+    "3. \tSchultz C, Niebisch A, Gebel L, Bott M. Glutamate production by Corynebacterium glutamicum: Dependence on the oxoglutarate dehydrogenase inhibitor protein OdhI and protein kinase PknG. Appl Microbiol Biotechnol. 2007;76(3). doi:10.1007/s00253-007-0933-9 \n",
+    "\n",
+    "4. \tEggeling L, Bott M. A giant market and a powerful metabolism: l-lysine provided by Corynebacterium glutamicum. Appl Microbiol Biotechnol. 2015. doi:10.1007/s00253-015-6508-2 \n",
+    "\n",
+    "5. \tBecker J, Zelder O, Häfner S, Schröder H, Wittmann C. From zero to hero-Design-based systems metabolic engineering of Corynebacterium glutamicum for l-lysine production. Metab Eng. 2011;13(2). doi:10.1016/j.ymben.2011.01.003 \n",
+    "\n",
+    "6. \tPark SH, Kim HU, Kim TY, Park JS, Kim SS, Lee SY. Metabolic engineering of Corynebacterium glutamicum for L-arginine production. Nat Commun. 2014;5. doi:10.1038/ncomms5618 \n",
+    "\n",
+    "7. \tBampidis V, Azimonti G, de Lourdes Bastos M, et al. Safety and efficacy of l-tryptophan produced by fermentation with Corynebacterium glutamicum KCCM 80176 for all animal species. EFSA J. 2019;17(6). doi:10.2903/j.efsa.2019.5729 \n",
+    "\n",
+    "8. \tWieschalka S, Blombach B, Bott M, Eikmanns BJ. Bio-based production of organic acids with Corynebacterium glutamicum. Microb Biotechnol. 2013;6(2). doi:10.1111/1751-7915.12013 \n",
+    "\n",
+    "9. \tTsuge Y, Hasunuma T, Kondo A. Recent advances in the metabolic engineering of Corynebacterium glutamicum for the production of lactate and succinate from renewable resources. J Ind Microbiol Biotechnol. 2015;42(3). doi:10.1007/s10295-014-1538-9 \n",
+    "\n",
+    "10. \tKogure T, Inui M. Recent advances in metabolic engineering of Corynebacterium glutamicum for bioproduction of value-added aromatic chemicals and natural products. Appl Microbiol Biotechnol. 2018;102(20). doi:10.1007/s00253-018-9289-6 \n",
+    "\n",
+    "11. \tSiebert D, Wendisch VF. Metabolic pathway engineering for production of 1,2-propanediol and 1-propanol by Corynebacterium glutamicum. Biotechnol Biofuels. 2015;8(1). doi:10.1186/s13068-015-0269-0 \n",
+    "\n",
+    "12. \tBecker J, Rohles CM, Wittmann C. Metabolically engineered Corynebacterium glutamicum for bio-based production of chemicals, fuels, materials, and healthcare products. Metab Eng. 2018;50. doi:10.1016/j.ymben.2018.07.008 \n",
+    "\n",
+    "13. \tWolf S, Becker J, Tsuge Y, et al. Advances in metabolic engineering of Corynebacterium glutamicum to produce high-value active ingredients for food, feed, human health, and well-being. Essays Biochem. 2021;65(2). doi:10.1042/EBC20200134 \n",
+    "\n",
+    "14. \tFreudl R. Beyond amino acids: Use of the Corynebacterium glutamicum cell factory for the secretion of heterologous proteins. J Biotechnol. 2017;258. doi:10.1016/j.jbiotec.2017.02.023 \n",
+    "\n",
+    "15. \tBlombach B, Seibold GM. Carbohydrate metabolism in Corynebacterium glutamicum and applications for the metabolic engineering of l-lysine production strains. Appl Microbiol Biotechnol. 2010;86(5):1313-1322. doi:10.1007/s00253-010-2537-z \n",
+    "\n",
+    "16. \tKawaguchi H, Yoshihara K, Hara KY, Hasunuma T, Ogino C, Kondo A. Metabolome analysis-based design and engineering of a metabolic pathway in Corynebacterium glutamicum to match rates of simultaneous utilization of d-glucose and l-arabinose. Microb Cell Fact. 2018;17(1):1-16. doi:10.1186/s12934-018-0927-6 \n",
+    "\n",
+    "17. \tBecker J, Kuhl M, Kohlstedt M, Starck S, Wittmann C. Metabolic engineering of Corynebacterium glutamicum for the production of cis, cis-muconic acid from lignin. Microb Cell Fact. 2018;17(1). doi:10.1186/s12934-018-0963-2 \n",
+    "\n",
+    "18. \tBecker J, Wittmann C. Bio-based production of chemicals, materials and fuels - Corynebacterium glutamicum as versatile cell factory. Curr Opin Biotechnol. 2012;23(4). doi:10.1016/j.copbio.2011.11.012 \n",
+    "\n",
+    "19. \tBecker J, Wittmann C. Advanced biotechnology: Metabolically engineered cells for the bio-based production of chemicals and fuels, materials, and health-care products. Angew Chemie - Int Ed. 2015;54(11). doi:10.1002/anie.201409033 \n",
+    "\n",
+    "20. \tErratum: The actinobacterium corynebacterium glutamicum, an industrial workhorse (J. Microbiol. Biotechnol, (2016) 26, 5, (807-822), 10.4014/jmb.1601.01053). J Microbiol Biotechnol. 2016;26(7). doi:10.4014/jmb.2016.2607.1341 \n",
+    "\n",
+    "21. \tBayan N, Houssin C, Chami M, Leblon G. Mycomembrane and S-layer: Two important structures of Corynebacterium glutamicum cell envelope with promising biotechnology applications. J Biotechnol. 2003;104(1-3). doi:10.1016/S0168-1656(03)00163-9 \n",
+    "\n",
+    "22. \tPuech V, Chami M, Lemassu A, et al. Structure of the cell envelope of corynebacteria: Importance of the non-covalently bound lipids in the formation of the cell wall permeability barrier and fracture plane. Microbiology. 2001;147(5). doi:10.1099/00221287-147-5-1365 \n",
+    "\n",
+    "23. \tYim SS, An SJ, Choi JW, Ryu AJ, Jeong KJ. High-level secretory production of recombinant single-chain variable fragment (scFv) in Corynebacterium glutamicum. Appl Microbiol Biotechnol. 2014;98(1). doi:10.1007/s00253-013-5315-x \n",
+    "\n",
+    "24. \tSrivastava P, Deb JK. Gene expression systems in corynebacteria. Protein Expr Purif. 2005;40(2). doi:10.1016/j.pep.2004.06.017 \n",
+    "\n",
+    "25. \tSun M, Gao X, Zhao Z, et al. Enhanced production of recombinant proteins in Corynebacterium glutamicum by constructing a bicistronic gene expression system. Microb Cell Fact. 2020;19(1). doi:10.1186/s12934-020-01370-9 \n",
+    "\n",
+    "26. \tLiu L, Yang H, Shin HD, Li J, Du G, Chen J. Recent advances in recombinant protein expression by Corynebacterium, Brevibacterium, and Streptomyces: From transcription and translation regulation to secretion pathway selection. Appl Microbiol Biotechnol. 2013;97(22). doi:10.1007/s00253-013-5250-x \n",
+    "\n",
+    "27. \tEggeling L, Bott M. Handbook of Corynebacterium Glutamicum.; 2005. doi:10.1201/9781420039696 \n",
+    "\n",
+    "28. \tAdams AM, Kaplan NA, Wei Z, et al. In vivo production of psilocybin in E. coli. Metab Eng. 2019;56. doi:10.1016/j.ymben.2019.09.009 \n",
+    "\n",
+    "29. \tMilne N, Thomsen P, Mølgaard Knudsen N, Rubaszka P, Kristensen M, Borodina I. Metabolic engineering of Saccharomyces cerevisiae for the de novo production of psilocybin and related tryptamine derivatives. Metab Eng. 2020;60. doi:10.1016/j.ymben.2019.12.007 \n",
+    "\n",
+    "30. \tLiu X, Yang Y, Zhang W, et al. Expression of recombinant protein using Corynebacterium Glutamicum: progress, challenges and applications. Crit Rev Biotechnol. 2016;36(4). doi:10.3109/07388551.2015.1004519 \n",
+    "\n",
+    "31. \tIkeda M, Katsumata R. Hyperproduction of tryptophan by Corynebacterium glutamicum with the modified pentose phosphate pathway. Appl Environ Microbiol. 1999;65(6). doi:10.1128/aem.65.6.2497-2502.1999 \n",
+    "\n",
+    "32. \tSun H, Zhao D, Xiong B, Zhang C, Bi C. Engineering Corynebacterium glutamicum for violacein hyper production. Microb Cell Fact. 2016;15(1). doi:10.1186/s12934-016-0545-0 \n",
+    "\n",
+    "33. \tVeldmann KH, Dachwitz S, Risse JM, Lee JH, Sewald N, Wendisch VF. Bromination of L-tryptophan in a Fermentative Process With Corynebacterium glutamicum. Front Bioeng Biotechnol. 2019;7. doi:10.3389/fbioe.2019.00219 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
