headline to structure ref

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -189,6 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### References for Introduction part: \"Literature review of the cell factory\":\n",
     "1. \tWendisch VF. Metabolic engineering advances and prospects for amino acid production. Metab Eng. 2020;58. doi:10.1016/j.ymben.2019.03.008 \n",
     "\n",
     "2. \tBrinkrolf K, Schröder J, Pühler A, Tauch A. The transcriptional regulatory repertoire of Corynebacterium glutamicum: Reconstruction of the network controlling pathways involved in lysine and glutamate production. J Biotechnol. 2010;149(3). doi:10.1016/j.jbiotec.2009.12.004 \n",
