finalized phenotype phase plane

--- a/1._Add_Psilocybin_to_Coynebacterium_Model.ipynb
+++ b/1._Add_Psilocybin_to_Coynebacterium_Model.ipynb
@@ -351,7 +351,7 @@
        "                <td><strong>Name</strong></td><td>S-AdenosyL_L_homocysteine demand</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0206bb5f44a8</td>\n",
+       "                <td>0x0283ebe40630</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -369,7 +369,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction DM_ahcys_c at 0x206bb5f44a8>"
+       "<Reaction DM_ahcys_c at 0x283ebe40630>"
       ]
      },
      "execution_count": 20,
