--- a/4._Production_Rate_Overview.ipynb
+++ b/4._Production_Rate_Overview.ipynb
@@ -94,10 +94,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Reaction psiK2 at 0x264c78b0ba8>,\n",
-       " <Reaction psiM2 at 0x264c78b0e80>,\n",
-       " <Reaction pho at 0x264c78b0d68>,\n",
-       " <Reaction psitpp at 0x264c78b0c50>]"
+       "[<Reaction psiK2 at 0x20be31dfcc0>,\n",
+       " <Reaction psiM2 at 0x20be31dfdd8>,\n",
+       " <Reaction pho at 0x20be31dfc18>,\n",
+       " <Reaction psitpp at 0x20be31df908>]"
       ]
      },
      "execution_count": 6,
@@ -378,7 +378,7 @@
        "                <td><strong>Name</strong></td><td>tryptophan synthase (indoleglycerol phosphate)</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0264c7b15978</td>\n",
+       "                <td>0x020be34439e8</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -396,7 +396,7 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction TRPS1 at 0x264c7b15978>"
+       "<Reaction TRPS1 at 0x20be34439e8>"
       ]
      },
      "execution_count": 13,
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "41ffcc5d",
    "metadata": {
     "scrolled": false
@@ -617,15 +617,15 @@
     {
      "data": {
       "text/plain": [
-       "[<Metabolite ala_B_c at 0x264c71a12e8>,\n",
-       " <Metabolite ala_B_e at 0x264c71a1390>,\n",
-       " <Metabolite ala_D_c at 0x264c71a14a8>,\n",
-       " <Metabolite ala_D_e at 0x264c71a1550>,\n",
-       " <Metabolite ala_L_c at 0x264c71a15f8>,\n",
-       " <Metabolite ala_L_e at 0x264c71a16a0>]"
+       "[<Metabolite ala_B_c at 0x20be2ad1358>,\n",
+       " <Metabolite ala_B_e at 0x20be2ad1400>,\n",
+       " <Metabolite ala_D_c at 0x20be2ad1518>,\n",
+       " <Metabolite ala_D_e at 0x20be2ad15c0>,\n",
+       " <Metabolite ala_L_c at 0x20be2ad1668>,\n",
+       " <Metabolite ala_L_e at 0x20be2ad1710>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "f7fbafc4",
    "metadata": {
     "scrolled": false
@@ -653,7 +653,7 @@
        "                <td><strong>Name</strong></td><td>L_Alanine exchange</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0264c7667e48</td>\n",
+       "                <td>0x020be2f96eb8</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -671,10 +671,10 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction EX_ala_L_e at 0x264c7667e48>"
+       "<Reaction EX_ala_L_e at 0x20be2f96eb8>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "3f019573",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
        " 'EX_cl': 0.0144877134286247}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "11a06826",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "269d59e6",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "facf9c88",
    "metadata": {},
    "outputs": [
@@ -881,6 +881,68 @@
     "print(f'{len(model.metabolites)} metabolites initially')\n",
     "print(f'{len(model.genes)} genes initially')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b2d124e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-10, 4.61339666666667)\n",
+      "(-10, 4.61339666666667)\n",
+      "(-10, 0.0)\n",
+      "(-10, 0.80668)\n",
+      "(-10, 1.29913)\n",
+      "(-10, 1.29913)\n",
+      "(-10, 0.72929499999977)\n",
+      "(-10, 0.670670000000445)\n",
+      "(-10, 2.30669833333333)\n",
+      "(-10, 1.84535866666667)\n",
+      "(-10, 2.30669833333333)\n",
+      "(-10, 0.537786666666667)\n",
+      "(-10, 0.22043)\n",
+      "(-10, 1.29913)\n",
+      "(-10, 0.80668)\n",
+      "(-10, 4.33829424528303)\n",
+      "(-10, 0.22043)\n",
+      "(-10, 0.22043)\n",
+      "(-10, 2.30669833333333)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.reactions.EX_ala_L_e.bounds)\n",
+    "print(model.reactions.EX_asn_L_e.bounds)\n",
+    "print(model.reactions.EX_asp_L_e.bounds)\n",
+    "print(model.reactions.EX_cys_L_e.bounds)\n",
+    "print(model.reactions.EX_gln_L_e.bounds)\n",
+    "print(model.reactions.EX_glu_L_e.bounds)\n",
+    "print(model.reactions.EX_gly_e.bounds)\n",
+    "print(model.reactions.EX_his_L_e.bounds)\n",
+    "print(model.reactions.EX_ile_L_e.bounds)\n",
+    "print(model.reactions.EX_leu_L_e.bounds)\n",
+    "print(model.reactions.EX_lys_L_e.bounds)\n",
+    "print(model.reactions.EX_met_L_e.bounds)\n",
+    "print(model.reactions.EX_phe_L_e.bounds)\n",
+    "print(model.reactions.EX_pro_L_e.bounds)\n",
+    "print(model.reactions.EX_ser_L_e.bounds)\n",
+    "print(model.reactions.EX_thr_L_e.bounds)\n",
+    "print(model.reactions.EX_trp_L_e.bounds)\n",
+    "print(model.reactions.EX_tyr_L_e.bounds)\n",
+    "print(model.reactions.EX_val_L_e.bounds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b06ad75d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
