Added links to references

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -253,7 +253,23 @@
     "\n",
     "32. \tSun H, Zhao D, Xiong B, Zhang C, Bi C. Engineering Corynebacterium glutamicum for violacein hyper production. Microb Cell Fact. 2016;15(1). doi:10.1186/s12934-016-0545-0 \n",
     "\n",
-    "33. \tVeldmann KH, Dachwitz S, Risse JM, Lee JH, Sewald N, Wendisch VF. Bromination of L-tryptophan in a Fermentative Process With Corynebacterium glutamicum. Front Bioeng Biotechnol. 2019;7. doi:10.3389/fbioe.2019.00219 "
+    "33. \tVeldmann KH, Dachwitz S, Risse JM, Lee JH, Sewald N, Wendisch VF. Bromination of L-tryptophan in a Fermentative Process With Corynebacterium glutamicum. Front Bioeng Biotechnol. 2019;7. doi:10.3389/fbioe.2019.00219 \n",
+    "\n",
+    "34. \thttps://www.genome.jp/pathway/map00901+K22436 \n",
+    "\n",
+    "35. \thttps://en.wikipedia.org/wiki/Psilocybin#Pharmacodynamics\n",
+    "\n",
+    "36. \thttps://en.wikipedia.org/wiki/Psilocin\n",
+    "\n",
+    "37.  \thttps://en.wikipedia.org/wiki/Serotonin\n",
+    "\n",
+    "38.  \thttps://www.drugs.com/illicit/psilocybin.html\n",
+    "\n",
+    "39.  \thttps://www.globenewswire.com/en/news-release/2020/08/06/2074356/0/en/Antidepressant-Drugs-Market-to-Grow-Valuation-of-15-98-Billion-by-2023.html\n",
+    "\n",
+    "40.  \thttps://fortune.com/2021/09/04/psychedelic-industry-investment-growth-stocks-companies/\n",
+    "\n",
+    "41.  \thttps://www.nejm.org/doi/full/10.1056/NEJMoa2032994"
    ]
   },
   {
