--- a/Report.ipynb
+++ b/Report.ipynb
@@ -98,11 +98,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is desired to modify the host cell to adapt it for production of new materials. A model for *Corynebacterium glutamicum* is modified to allow the production of psilocybin, a hallucinogenic compound, which is currently seen as promising future medicine in order to treat depressions and other mental afflictions. \n",
-    "For implementation of the syntethic pathway we are introducing a series of enzymatic reactions, which were already reported and succesfully implemented to *S. cerevisiae*. The syntethic pathways starts from the amino-acid L-tryptophan, which is naturally present in *C. glutamicum*. Priviously, *C. glutamicum* was successfully used for the production of L-tryptophan derived products. And thus was selected for this project.\n",
-    "\n",
-    "It is desired to maximize the production of psylocibin while maintaining an acceptable growth rate. For this, it is desired that the production rate and yield of psylocibin in the engineered *C. glutamicum* should be similar to yields reported previously using *S. cerevisiae* or *E.coli* as cell-factory. \n",
-    "Gene optimization methods will be applied to the cell model (iCW773) to improve the theoretical yield of the product. "
+    "It is desired to modify the host cell to adapt it for production of a new compound. In order to achieve this a model for *Corynebacterium glutamicum* (iCW773) [1] is modified, by the addition of a synthetic pathway, to allow the production of psilocybin, a hallucinogenic compound, which is currently seen as promising future medicine in order to treat depressions and other mental afflictions. \n",
+    "For implementation of the synthetic pathway we are introducing a series of enzymatic reactions, which were already reported and successfully implemented to *S. cerevisiae*[2]. The synthetic pathways starts from the amino-acid L-tryptophan, which is naturally present in *C. glutamicum*. Previously, *C. glutamicum* was successfully used for the production of L-tryptophan derived products, such as violacein or brominated L-tryptophan[3], [4]. Thus, the production of psilocybin from L-tryptophan was selected as promising strategy for this project.\n",
+    "This project is not only aiming for adding psilocybin as new product to the portfolio of *C. glutamicum*, but also intends to optimize the production rate and yield for psilocybin. Optimally, *C. glutamicum* shows higher potential for the production of psilocybin than previously engineered cell-factories such as *S. cerevisiae* or *E.coli*[2], [5]. \n",
+    "\n"
    ]
   },
   {
@@ -271,7 +270,19 @@
     "\n",
     "7.  \thttps://fortune.com/2021/09/04/psychedelic-industry-investment-growth-stocks-companies/\n",
     "\n",
-    "8.  \thttps://www.nejm.org/doi/full/10.1056/NEJMoa2032994"
+    "8.  \thttps://www.nejm.org/doi/full/10.1056/NEJMoa2032994\n",
+    "\n",
+    "#### References for \"Problem definition\":\n",
+    "[1]\tY. Zhang et al., “A new genome-scale metabolic model of Corynebacterium glutamicum and its application,” Biotechnol. Biofuels, vol. 10, no. 1, 2017.\n",
+    "\n",
+    "[2]\tN. Milne, P. Thomsen, N. Mølgaard Knudsen, P. Rubaszka, M. Kristensen, and I. Borodina, “Metabolic engineering of Saccharomyces cerevisiae for the de novo production of psilocybin and related tryptamine derivatives,” Metab. Eng., vol. 60, 2020.\n",
+    "\n",
+    "[3]\tH. Sun, D. Zhao, B. Xiong, C. Zhang, and C. Bi, “Engineering Corynebacterium glutamicum for violacein hyper production,” Microb. Cell Fact., vol. 15, no. 1, 2016.\n",
+    "\n",
+    "[4]\tK. H. Veldmann, S. Dachwitz, J. M. Risse, J. H. Lee, N. Sewald, and V. F. Wendisch, “Bromination of L-tryptophan in a Fermentative Process With Corynebacterium glutamicum,” Front. Bioeng. Biotechnol., vol. 7, 2019.\n",
+    "\n",
+    "[5]\tA. M. Adams et al., “In vivo production of psilocybin in E. coli,” Metab. Eng., vol. 56, 2019.\n",
+    "\n"
    ]
   },
   {
