--- a/Report.ipynb
+++ b/Report.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import FileLink, FileLinks # imported to enable insertion of Links"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,6 +176,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Cell engineering strategies tested for the production of psilocybin in *C. glutamicum*\n",
+    "Different strategies were used in order to achieve and optimize the production of psilocybin via *C. glutamicum*. All tested strategies are summarized in the table below (Table 3).\n",
+    "\n",
+    "Table 3. Stretegies tested for engineering *C. glutamicum* toward the production of psilocybin. \n",
+    "\n",
+    "| Strategy| Link to Jupyter Notebook| Succesfull? (y: yes, n: no) | \n",
+    "|:-:|:-:|:-:|\n",
+    "| Addition of heterologous pathways | | y | \n",
+    "|Prediction of alternative pathways||n|\n",
+    "|Optimization of medium||?|\n",
+    "|Phenotypic phase plane analysis||?|\n",
+    "|Identification of overexpression and downregulation targets||y|\n",
+    "|Identifying co-factor swap targets||n|\n",
+    "|OptGene and OptKnock||n|\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1 Addition of heterologous pathway\n",
+    "In order to enable psilocybin production with *C. glutamicum* using the model iCW773 the following pathway and respective enzymatic reactions were added to iCW773_test7 (Figure 4). Previously, this pathway was already successfully introduced to *S. cerevisiae*. The metabolite L-tryptophan was already present in the model iCW773.\n",
+    "\n",
+    "![Heterologous pathway](Pictures/Psilocybin_All_reactions.png \"Heterologous pathway\")\n",
+    "Figure 4 - Heterologous pathway for the production of psilocybin introduced to the model iCW773."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='1._Add_Psilocybin_to_Coynebacterium_Model.ipynb' target='_blank'>1._Add_Psilocybin_to_Coynebacterium_Model.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"1._Add_Psilocybin_to_Coynebacterium_Model.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2 Prediction of alternative pathways\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='5._Predict_heterologous_pathways.ipynb' target='_blank'>5._Predict_heterologous_pathways.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"5._Predict_heterologous_pathways.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Path (<tt></tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Discussion (<500 words)"
    ]
   },
@@ -273,15 +406,13 @@
     "8.  \thttps://www.nejm.org/doi/full/10.1056/NEJMoa2032994\n",
     "\n",
     "#### References for \"Problem definition\":\n",
-    "[1]\tY. Zhang et al., “A new genome-scale metabolic model of Corynebacterium glutamicum and its application,” Biotechnol. Biofuels, vol. 10, no. 1, 2017.\n",
+    "1. \tZhang Y, Cai J, Shang X, et al. A new genome-scale metabolic model of Corynebacterium glutamicum and its application. Biotechnol Biofuels. 2017;10(1). doi:10.1186/s13068-017-0856-3\n",
+    "2. \tMilne N, Thomsen P, Mølgaard Knudsen N, Rubaszka P, Kristensen M, Borodina I. Metabolic engineering of Saccharomyces cerevisiae for the de novo production of psilocybin and related tryptamine derivatives. Metab Eng. 2020;60. doi:10.1016/j.ymben.2019.12.007\n",
+    "3. \tSun H, Zhao D, Xiong B, Zhang C, Bi C. Engineering Corynebacterium glutamicum for violacein hyper production. Microb Cell Fact. 2016;15(1). doi:10.1186/s12934-016-0545-0\n",
+    "4. \tVeldmann KH, Dachwitz S, Risse JM, Lee JH, Sewald N, Wendisch VF. Bromination of L-tryptophan in a Fermentative Process With Corynebacterium glutamicum. Front Bioeng Biotechnol. 2019;7. doi:10.3389/fbioe.2019.00219\n",
+    "5. \tAdams AM, Kaplan NA, Wei Z, et al. In vivo production of psilocybin in E. coli. Metab Eng. 2019;56. doi:10.1016/j.ymben.2019.09.009\n",
     "\n",
-    "[2]\tN. Milne, P. Thomsen, N. Mølgaard Knudsen, P. Rubaszka, M. Kristensen, and I. Borodina, “Metabolic engineering of Saccharomyces cerevisiae for the de novo production of psilocybin and related tryptamine derivatives,” Metab. Eng., vol. 60, 2020.\n",
     "\n",
-    "[3]\tH. Sun, D. Zhao, B. Xiong, C. Zhang, and C. Bi, “Engineering Corynebacterium glutamicum for violacein hyper production,” Microb. Cell Fact., vol. 15, no. 1, 2016.\n",
-    "\n",
-    "[4]\tK. H. Veldmann, S. Dachwitz, J. M. Risse, J. H. Lee, N. Sewald, and V. F. Wendisch, “Bromination of L-tryptophan in a Fermentative Process With Corynebacterium glutamicum,” Front. Bioeng. Biotechnol., vol. 7, 2019.\n",
-    "\n",
-    "[5]\tA. M. Adams et al., “In vivo production of psilocybin in E. coli,” Metab. Eng., vol. 56, 2019.\n",
     "\n"
    ]
   },
