--- a/Report.ipynb
+++ b/Report.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Metabolic pathway of Psilocybin](Pictures/Psilocybin_production_report.png \"Metabolic pathway of Psilocybi\")\n",
+    "![Metabolic pathway of Psilocybin](Pictures/Psilocybin_production_report.png \"Metabolic pathway of Psilocybin\")\n",
     "\n",
     "Figure 3 - The synthetic production of Psilocybin using the amino acid L-Tryptophan."
    ]
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. *Project category II:* Selection and assessment of existing GSM (<500 words)"
+    "## 3. Project category II: Selection and assessment of existing GSM (<500 words)"
    ]
   },
   {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\1._Add_Psilocybin_to_Coynebacterium_Model.ipynb"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,12 +263,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.3 "
+    "#### 4.3 Optimization of medium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,11 +290,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 4.X OptGene, OptKnock and Co-factor swapping\n",
+    "As further strategies, the functions OptGene, OptKnock and Co-factor swapping from the python package Cameo were tested.\n",
+    "\n",
+    "**OptGene:** \n",
+    "\n",
+    "OptGene is an approach to search for gene or reaction knockouts that relies on evolutionary algorithms. However, running OptGene with our model for optimized psilocybin production resulted in no identified target genes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"7_Gene_Optimization.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**OptKnock**? Didn't we test this as well? I can't find the code..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Co-factor swapping** \n",
+    "\n",
+    "Co-factors are essential for many metabolic enzymes in order to function properly. Furthermore keeping the balance between co-factors is important for homeostasis. This balance could be unfavorable for metabolic engineering. A good example for such a balance are the co-factors NAD+/NADH and NADP+/NADPH. Actually, there are several enzymes reported to be able to use both as co-factors. Furthermore, it’s possible to engineer enzymes towards use of both co-factor or to change their preference towards another co-factor. In order to identify targets, where co-factor swapping would result in higher production of psilocybin, we tried Cameo’s Co-factor swapping algorithm. As this didn’t result in any suggested targets, co-factor swapping seems to be no promising strategy for our product, psilocybin. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='6._Cofactor_swapping.ipynb' target='_blank'>6._Cofactor_swapping.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\tamwei\\group_project_psi\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"6._Cofactor_swapping.ipynb\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -426,7 +495,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -440,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
