--- a/Report.ipynb
+++ b/Report.ipynb
@@ -298,7 +298,9 @@
     "\n",
     "**OptGene:** \n",
     "\n",
-    "OptGene is an approach to search for gene or reaction knockouts that relies on evolutionary algorithms. However, running OptGene with our model for optimized psilocybin production resulted in no identified target genes."
+    "In the attempt to improve the Psilocybin production, an attempt at gene optimization was carried out. The cobrapy optgene function creates random mutations and then checks if the mutation optimized the production of the desired product. We tried multiple times with different number of iteration and numbers of mutation, but it yielded no results.\n",
+    "\n",
+    "A good strategy if optimization yields no results is trying to run the optimization under anaerobic condition. Corynebacterium is able to grow under anaerobic condition, however, our model didn't agrees with this. For some reason, the model estimated no growth when oxygen was not present and for this reason we couldn't run an optgene under anaerobic condition."
    ]
   },
   {
@@ -495,7 +497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
